checkpointing at this point, __str__ isnt working properly

--- a/output.yaml
+++ b/output.yaml
@@ -1,13 +1,11 @@
 pointsTo:
   Safe:
-  - '#4:Sens[(20-CFA()|LSA[i:10,j:100]())]'
-  - '#6:Sens[(20-CFA()|LSA[i:10,j:100]())]'
+  - ''
   TAJS:
-  - '@Object#node18'
-  - '@Object#node21'
+  - ' name and line number combination passe'
 query:
   file: example.js
   groundTruth:
     pointsToSize: 2
-  lineNumber: '9'
+  lineNumber: '8'
   variable: t
