--- a/config.json
+++ b/config.json
@@ -1,28 +1,1 @@
-{
-  "files": [
-    {
-      "name": "example.js",
-
-      "pointers": [
-        {
-          "varName": "t",
-          "lineNumber": 9
-        },
-        {
-          "varName": "src",
-          "lineNumber": 1
-        },
-        {
-          "varName": "ext",
-          "lineNumber": 4
-        },
-        {
-          "varName": "temp",
-          "lineNumber": 10
-        }
-      ]
-    }
-  ],
-  "tajs": true,
-  "safe": true
-}
+{"files": [{"name": "test-suite/aliasing/alias2.js", "pointers": [{"varName": "b", "lineNumber": "3", "pointsToSize": 1}, {"varName": "a", "lineNumber": "1", "pointsToSize": 1}]}], "tajs": true, "safe": true}
