--- a/output.yaml
+++ b/output.yaml
@@ -1,25 +1,34 @@
 files:
-  - filename: test-suite/aliasing/alias1.js
-    pointers:
-      - groundTruth: 1
-        lineNumber: 2
-        safe:
-          output:
-            - "#4:Sens[(20-CFA()|LSA[i:10,j:100]())]"
-          precision: 1.0
-        tajs:
-          output:
-            - "@Object#node13"
-          precision: 1.0
-        varname: dest
-      - groundTruth: 1
-        lineNumber: 6
-        safe:
-          output:
-            - "#4:Sens[(20-CFA()|LSA[i:10,j:100]())]"
-          precision: 1.0
-        tajs:
-          output:
-            - "@Object#node13"
-          precision: 1.0
-        varname: src
+- filename: test-suite/flow-sensitivity/flow-sensitivity-1.js
+  pointers:
+  - groundTruth: 1
+    lineNumber: 3
+    safe:
+      output:
+      - '#4:Sens[(20-CFA()|LSA[i:10,j:100]())]'
+      precision: 1.0
+    tajs:
+      output:
+      - '@Object#node18'
+      precision: 1.0
+    varname: f
+  - groundTruth: 1
+    lineNumber: 1
+    safe:
+      output:
+      - '#1:Sens[(20-CFA()|LSA[i:10,j:100]())]'
+      precision: 1.0
+    tajs:
+      output:
+      - '@Object#node12'
+      precision: 1.0
+    varname: x
+  - groundTruth: 0
+    lineNumber: 3
+    safe:
+      output: []
+      precision: 0
+    tajs:
+      output: []
+      precision: 0
+    varname: z
