--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"files": [{"name": "test-suite/flow-sensitivity/flow-sensitivity-1.js", "pointers": [{"varName": "f", "lineNumber": "3", "pointsToSize": 1}, {"varName": "x", "lineNumber": "1", "pointsToSize": 1}, {"varName": "z", "lineNumber": "3", "pointsToSize": 0}]}], "tajs": true, "safe": true}
+{"files": [{"name": "test-suite/object-sensitivity/object-sensitivity-3.js", "pointers": [{"varName": "f", "lineNumber": "21", "pointsToSize": 1}, {"varName": "f", "lineNumber": "22", "pointsToSize": 1}]}], "tajs": true, "safe": true}
