--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"files": [{"name": "test-suite/object-sensitivity/object-sensitivity-3.js", "pointers": [{"varName": "f", "lineNumber": "21", "pointsToSize": 1}, {"varName": "f", "lineNumber": "22", "pointsToSize": 1}]}], "tajs": true, "safe": true}
+{"files": [{"name": "test-suite/prototype/prototype-5.js", "pointers": [{"varName": "c", "lineNumber": "8", "pointsToSize": 1}, {"varName": "c", "lineNumber": "11", "pointsToSize": 1}, {"varName": "c", "lineNumber": "13", "pointsToSize": 0}]}], "tajs": true, "safe": true}
