--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"files": [{"name": "test-suite/prototype/prototype-5.js", "pointers": [{"varName": "b.c", "lineNumber": "8", "pointsToSize": 1}]}], "tajs": true, "safe": true}
+{"files": [{"name": "test-suite/property-name/property-name-4.js", "pointers": [{"varName": "t1", "lineNumber": "12", "pointsToSize": 1}, {"varName": "t2", "lineNumber": "13", "pointsToSize": 1}]}], "tajs": true, "safe": false}
